--- a/Movie Recommendation System.ipynb
+++ b/Movie Recommendation System.ipynb
@@ -4880,6 +4880,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collaborative Filtering\n",
+    "\n",
+    "#### User based collaborative filtering\n",
+    "\n",
+    "* Recommend products to a user that another similar user has liked.\n",
+    "\n",
+    "###### Issues\n",
+    "\n",
+    "* User preferences change over time.\n",
+    "\n",
+    "\n",
+    "* Similarity matrix is pre-computed so changes in user preferences for the uncovered window will not be accounted for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/reco5.JPG\">\n",
+    "<img src=\"img/reco6.JPG\">\n",
+    "<img src=\"img/reco7.JPG\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Item based collaborative filtering\n",
+    "\n",
+    "* Instead of creating similarity matrix between the users, we'll measure the similarity between the items that **targeted user** has rated.\n",
+    "\n",
+    "<img src=\"img/reco8.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Scalability** : One of the issues in recommender systems is giving real time recommendations. Recommenders are High Throughput and Low Latency systems.\n",
+    "\n",
+    "\n",
+    "* As # of users (m) and # of products (n) increase, the time complexity will increase. O(m*n)\n",
+    "\n",
+    "\n",
+    "* Sparse matrix is generatedd\n",
+    "\n",
+    "\n",
+    "* Recommendation is an optimization problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution : Singular Value Decomposition\n",
+    "\n",
+    "### Metric : RMSE (the lower the better)\n",
+    "\n",
+    "### Library : Surprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !conda install -c conda-forge scikit-surprise or pip install surprise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from surprise import Reader, Dataset, SVD\n",
+    "\n",
+    "from surprise.model_selection import cross_validate\n",
+    "\n",
+    "reader = Reader()\n",
+    "\n",
+    "df_ = pd.read_csv('datasets/ratings_small.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.9016  0.8944  0.8849  0.9094  0.8968  0.8974  0.0081  \n",
+      "MAE (testset)     0.6976  0.6883  0.6810  0.6991  0.6890  0.6910  0.0066  \n",
+      "Fit time          4.09    4.02    3.92    3.83    3.69    3.91    0.14    \n",
+      "Test time         0.14    0.12    0.11    0.13    0.10    0.12    0.01    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'test_rmse': array([0.90155069, 0.89437311, 0.88485256, 0.909417  , 0.89682848]),\n",
+       " 'test_mae': array([0.69755162, 0.68834284, 0.68097465, 0.69913146, 0.6889984 ]),\n",
+       " 'fit_time': (4.09225869178772,\n",
+       "  4.016151666641235,\n",
+       "  3.921318292617798,\n",
+       "  3.8328168392181396,\n",
+       "  3.687896966934204),\n",
+       " 'test_time': (0.13614511489868164,\n",
+       "  0.11810111999511719,\n",
+       "  0.10921287536621094,\n",
+       "  0.13295888900756836,\n",
+       "  0.10308194160461426)}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = Dataset.load_from_df(df_[['userId', 'movieId', 'rating']],reader)\n",
+    "\n",
+    "algo = SVD()\n",
+    "\n",
+    "cross_validate(algo,data,measures=['RMSE','MAE'],cv=5,verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['userId', 'movieId', 'rating', 'timestamp'], dtype='object')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "surprise.dataset.DatasetAutoFolds"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
