--- a/Movie Recommendation System.ipynb
+++ b/Movie Recommendation System.ipynb
@@ -5058,31 +5058,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1260759144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1260759179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1061</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1260759182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1129</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1172</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1260759205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1287</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1293</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1339</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1260759125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1343</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1371</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1260759135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1405</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1260759203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1260759191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1260759139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2150</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1260759194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2193</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2294</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1260759108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2455</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1260759113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2968</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1260759200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3671</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1260759117</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    userId  movieId  rating   timestamp\n",
+       "0        1       31     2.5  1260759144\n",
+       "1        1     1029     3.0  1260759179\n",
+       "2        1     1061     3.0  1260759182\n",
+       "3        1     1129     2.0  1260759185\n",
+       "4        1     1172     4.0  1260759205\n",
+       "5        1     1263     2.0  1260759151\n",
+       "6        1     1287     2.0  1260759187\n",
+       "7        1     1293     2.0  1260759148\n",
+       "8        1     1339     3.5  1260759125\n",
+       "9        1     1343     2.0  1260759131\n",
+       "10       1     1371     2.5  1260759135\n",
+       "11       1     1405     1.0  1260759203\n",
+       "12       1     1953     4.0  1260759191\n",
+       "13       1     2105     4.0  1260759139\n",
+       "14       1     2150     3.0  1260759194\n",
+       "15       1     2193     2.0  1260759198\n",
+       "16       1     2294     2.0  1260759108\n",
+       "17       1     2455     2.5  1260759113\n",
+       "18       1     2968     1.0  1260759200\n",
+       "19       1     3671     3.0  1260759117"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_[df_['userId']==1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 1          item: 302        r_ui = None   est = 3.00   {'was_impossible': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=1, iid=302, r_ui=None, est=3.0047847520284985, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "algo.predict(1,302,verbose=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 1          item: 19         r_ui = None   est = 2.38   {'was_impossible': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=1, iid=19, r_ui=None, est=2.382665535691675, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "algo.predict(1,19,verbose=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 1          item: 18         r_ui = None   est = 2.98   {'was_impossible': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=1, iid=18, r_ui=None, est=2.984370820128508, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "algo.predict(1,18,verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "\n",
+    "1. 3 types of reco engines: \n",
+    "    a. Demography based\n",
+    "    b. Content based\n",
+    "    c. Collaborative Filtering based\n",
+    "    \n",
+    "    \n",
+    "2. Demography based were pretty elementary.\n",
+    "\n",
+    "\n",
+    "3. Content based can be improved by increasing the metadata.\n",
+    "\n",
+    "\n",
+    "4. UBCF and IBCF are used with Content based to create a hybrid approach.\n",
+    "\n",
+    "\n",
+    "5. This a starter pack for you. Use this code and improve it and apply it on similar problems."
+   ]
   },
   {
    "cell_type": "markdown",
